# scrapy-sentry-errors

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
city_scrapers_sentry/: utils.py
example_project/: scrapy.cfg  settings.py
example_project/example_project/: items.py  middlewares.py  pipelines.py  settings.py
example_project/example_project/spiders/: example.py
scripts/: build.sh  deploy.sh  dev-setup.sh  example.sh
src/city_scrapers_sentry/: extensions.py  utils.py
src/scrapy_sentry_errors/: extensions.py
tests/: test_extensions.py
